# albion-rpg

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md  run.sh
examples/: profile.toml
src/: lib.rs  main.rs
src/combat/: battle.rs  enemy.rs  inventory.rs
src/data/: achievements.rs  guilds.rs  health.rs  player.rs  settings.rs  xp.rs
src/data/inventory/: armor.rs  bank.rs  equipment.rs  items.rs  weapons.rs
src/economy/: armor.rs  guilds.rs  items.rs  shop.rs  weapons.rs
src/lib/: config_encoding.rs  crypt.rs  files.rs  input.rs  math.rs  messages.rs  os.rs  stdmsgs.rs  terminal.rs  tui.rs  user_profile.rs
src/lib/user/: achievements.rs  armor.rs  bank.rs  guilds.rs  inventory.rs  profile.rs  settings.rs  weapons.rs  xp.rs
src/menus/: accounts.rs  game_menu.rs  login.rs  register.rs
src/menus/accounts/: accounts.rs  login.rs  main.rs  register.rs
src/menus/combat/: c1_the_stronghold.rs  c2_wander_realm.rs
src/menus/devmode/: bank_mgr.rs  d1_developer_menu.rs  d2_user_mgr.rs  d3_xp_mgr.rs  d4_inventory_mgr.rs  d5_bank_mgr.rs  inventory_mgr.rs  xp_mgr.rs
src/menus/economy/: e1_the_guilds.rs  e2_the_bank.rs  e3_trading_post.rs  e4_weapons_shop.rs  e5_armor_shop.rs  e6_mystic_shop.rs
src/menus/game/: game_menu.rs  main.rs
src/menus/game/combat/: c1_the_stronghold.rs  c2_wander_realm.rs
src/menus/game/economy/: e1_the_guilds.rs  e2_the_bank.rs  e3_trading_post.rs  e4_weapons_shop.rs  e5_armor_shop.rs  e6_mystic_shop.rs  e7_celestial_shop.rs
src/menus/game/profile/: d1_developer_menu.rs  n1_settings.rs  p1_inventory.rs  p2_hall_of_records.rs
src/menus/profile/: d1_developer_menu.rs  n1_settings.rs  p1_inventory.rs  p2_hall_of_records.rs
src/menus/start/: accounts.rs  main_menu.rs
src/misc/: config_encoding.rs  crypt.rs  input.rs  messages.rs  terminal.rs  tui.rs
src/player/: achievements.rs  armor.rs  bank.rs  equipment.rs  guilds.rs  health.rs  inventory.rs  profile.rs  settings.rs  weapons.rs  xp.rs
src/player/inventory/: armor.rs  bank.rs  equipment.rs  items.rs  weapons.rs
src/user/: achievements.rs  armor.rs  bank.rs  guilds.rs  inventory.rs  profile.rs  settings.rs  weapons.rs  xp.rs
src/utils/: crypt.rs  error.rs  files.rs  input.rs  math.rs  messages.rs  os.rs  terminal.rs  tui.rs
