[package]
name = "albion_rpg"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license = "BSD-3-Clause"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.11.0", features = ["completion"] }
console = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
whoami = "1.4.1"
crossterm = "0.27.0"
bcrypt = "0.15.0"
csv_to_table = "0.4.0"
toml = "0.8.8"
ansi_term = "0.12.1"
