[package]
name = "albion_terminal_rpg"
version = "0.1.2"
edition = "2021"
description = "Text-based terminal RPG."
readme = "./README.md"
repository = "https://github.com/rmj1001/albion-rpg"
keywords = ["game", "terminal", "tui", "rpg"]
license = "BSD-3-Clause"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="albionrpg"
path="./src/main.rs"

[dependencies]
dialoguer = { version = "0.11.0", features = ["completion"] }
console = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
whoami = "1.4.1"
crossterm = "0.27.0"
bcrypt = "0.15.0"
csv_to_table = "0.4.0"
toml = "0.8.8"
easy_switch = "0.2.0"
