[package]
name = "albion_terminal_rpg"
version = "1.7.9"
edition = "2021"
description = "Text-based terminal RPG."
readme = "./README.md"
repository = "https://github.com/rmj1001/albion-rpg"
keywords = ["game", "terminal", "tui", "rpg"]
license = "BSD-3-Clause"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "albionrpg"
path = "./src/main.rs"

[badges]
maintenance = { status = "passively-maintained" }

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
console = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
whoami = "1.4.1"
crossterm = "0.27.0"
bcrypt = "0.15.0"
csv_to_table = "0.4.0"
toml = "0.8.10"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
rpassword = "7.3.1"
dialoguer = "0.11.0"
